--- a/WindowsFormsApp3/BorsaProjesi.csproj
+++ b/WindowsFormsApp3/BorsaProjesi.csproj
@@ -72,6 +72,11 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="IAdminService.cs" />
+    <Compile Include="IEntity.cs" />
+    <Compile Include="IEntityRepository.cs" />
+    <Compile Include="IProductService.cs" />
+    <Compile Include="IUserService.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="ProductManager.cs" />
     <Compile Include="Program.cs" />
